[package]
name = "sqlx-example-postgres-connected-todos"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
sqlx = { version = "0.5.10", features = ["postgres", "offline", "runtime-async-std-native-tls"] }
